@@ -9,5 +9,6 @@ write (x=<? getRK("data"); ?>, file="<? getRK("file"); ?>", ncolumns=<? getRK("n
 }
 
 function printout () {
+	makeHeaderCode ("Write Variables", array ("File" => getRK_val ("file"), "Data" => getRK_val ("data")));
 }
 ?>
