@@ -1,3 +1,5 @@
+- (Almost) all plugins now write a header to the output window		TODO: work in progress; which ones should not?
+- Add makeHeaderCode convenience function for use inside plugins	TODO: document
 - Adjust some icons
 - Add "Run again" link for plugin generated output		TODO: revisit plugins without header
 - Fixed: All objects in .Globalenv would be revisited if a single object was added / removed		TODO: backport? (r2466, 2473)
